--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,28 +1,32 @@
 body {
-	width: 50%;
-	margin: 20px auto 20px auto;
+	width: 100%;
+    Height: 100%
+	margin: auto;
 	background-color: white;
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	border-style: solid;
 }
 .navigation {
 	text-align: center;
-	background-color: black;
+	background: #b56663;
 	color: white;
 	padding: 24px 0 24px 0;
+	
 }
 .content {
-	padding: 24px;
+	padding: 25px 30px 30px 30px;
+	margin-bottom: 30px;
 	background-color: #F0F0F0;
 }
 .footer {
-	background-color: black;
+	
 	border-top: solid;
 	padding-left: 24px;
 	padding-right: 24px;
-	padding-bottom: 1px;
+	padding-bottom: 10px;
 	color: white;
 	text-align: center;
+	background-color: #b56663;
 }
 p {
 	font-size: 24px;
@@ -34,4 +38,16 @@ p {
 #profile-photo {
 	float: left;
 	padding: 20px;
+	border-radius: 50%;
 }
+。nav a{
+	color: white;
+}
+ul li{
+	display: inline;
+	padding-right: 10px
+}
+
+
+
+
