--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,4 +1,11 @@
-ody {
+/*All colors:
+1. #AEB05D
+2. #DCD191
+3. #D3A46E
+4. #E39871
+5. #DF7D60
+*/
+body {
 	width: 100%;
     Height: 100%
 	margin: auto;
@@ -6,22 +13,30 @@ ody {
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	border-style: solid;
 }
-.navigation {
+.title {
 	text-align: center;
 	padding: 24px 0 3px 0;
-	color: #F08080;
-	background-image: url("../images/cartoonBirds.jpg");
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
+	background-color: #AEB05D;
 }
-.navigation h1{
+.title h1 {
 	padding-bottom: 40px;
 	padding-top: 5px;
 	font-size: 35px;
+    color: #DF7D60;
 }
-.navigation ul{
+.navbar {
+    background-color: #DCD191;
+    text-align: center;
 	font-size: 20px;
 	padding-bottom: 0;
+    margin: 0;
+}
+.navbar li{
+	display: inline;
+	padding-right: 30px;
+}
+.navbar a{
+    color: #DF7D60; 
 }
 .content {
 	padding: 80px 30px 80px 30px;
@@ -35,7 +50,7 @@ ody {
 	padding-bottom: 10px;
 	color: white;
 	text-align: center;
-	background-color: #00BFFF;
+	background-color:  #D3A46E;
 }
 p {
 	font-size: 24px;
@@ -45,13 +60,6 @@ p {
 	margin-bottom: 200px;
 }
 
-。nav a{
-	color: white;
-}
-ul li{
-	display: inline;
-	padding-right: 30px;
-}
 
 
 
