--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -7,7 +7,9 @@
 */
 body {
 	width: 60%;
-    height: 100%;
+    min-width:1000px;
+    max-width:2000px;
+    height: auto;
 	margin: auto;
 	background-color: white;
 	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
@@ -26,13 +28,14 @@ body {
 .navbar {
     background-color: #DCD191;
     text-align: center;
-	font-size: 20px;
+	font-size: 1.2em;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     margin: 0;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
+    padding-right: 4%;
 }
 ul {
     list-style-type: none;
@@ -41,14 +44,14 @@ ul {
     color: #DF7D60; 
 }
 .content {
-	padding: 80px 30px 80px 30px;
+	padding: 80px 3.2% 80px 3.2%;
 	background-color: white;
 }
 .footer {
 	border-top: solid;
-	padding-left: 24px;
-	padding-right: 24px;
-	padding-bottom: 10px;
+	padding-left: 2.5%;
+	padding-right: 2.5%;
+	padding-bottom: 1.05%;
 	color: white;
 	text-align: center;
 	background-color:  #D3A46E;
@@ -74,12 +77,18 @@ p {
     color: white;
     font-size: 0.55em;
 }
+.slidedown p{
+    font-size: 1.33em;
+    text-align: center;
+}
 .slidedown li{
-    width: 11.8em;  
-    height: 4em;  
+    width: auto;  
+    height: 40px;  
 }
 .slidedown a{
     color: white;
+    font-size: 1.33em;
+    text-align: center;
 }
 .slidedown li:hover{
     background: #AEB05D;
